Fixed squashed profile pic

--- a/front/src/components/rightbar/rightbar.scss
+++ b/front/src/components/rightbar/rightbar.scss
@@ -40,9 +40,9 @@
         gap: 10px;
         position: relative;
 
-        img {
-          max-width: 30px;
-          max-height: 30px;
+        .img-online {
+          width: 30px;
+          height: 30px;
           border-radius: 50%;
           object-fit: cover;
         }
